--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "@material-ui/styles": "^4.4.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-swipeable-views": "^0.13.3"
   },
   "scripts": {
     "start": "react-scripts start",
